kubernetes/manifests/tibiary-test/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tibiary-api
  labels:
    app.kubernetes.io/name: tibiary-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tibiary-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
